# autoproj_py

./: .gitignore  activate.sh  build.sh  deactivate.sh  desactivate.sh  install.sh  pyproject.toml
autoproj_py/: autoproj.py  config.py  logger.py
autoproj_py/autobuild/: dsl.py  logger.py  package.py  registry.py  subprocess.py
autoproj_py/cli/: __init__.py  bootstrap.py  build.py
autoproj_py/ops/: acquire.py
autoproj_py/package/: definition.py  dsl.py  registry.py
